RESOLVED FIXED161889
URLParser: Correctly ignore spaces before relative URLs with no scheme
https://bugs.webkit.org/show_bug.cgi?id=161889
Summary URLParser: Correctly ignore spaces before relative URLs with no scheme
Alex Christensen
Reported 2016-09-12 18:06:46 PDT
URLParser: Correctly ignore spaces before relative URLs with no scheme
Attachments
Patch (3.51 KB, patch)
2016-09-12 18:08 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-09-12 18:08:20 PDT
Alex Christensen
Comment 2 2016-09-12 18:27:34 PDT
Note You need to log in before you can comment on or make changes to this bug.