URLParser: Correctly ignore spaces before relative URLs with no scheme https://bugs.webkit.org/show_bug.cgi?id=161889

Reviewed by Daniel Bates.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parse):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205846 268f45cc-cd09-0410-ab3c-d52691b4dbfc